--- a/compose/jenkins/docker-compose.yml
+++ b/compose/jenkins/docker-compose.yml
@@ -11,9 +11,9 @@ services:
         restart: always
         extra_hosts:
             # config for gerrit, sonar, ldap. if no, remove them
-            - gerrit.m.local:192.168.91.103
-            - sonar.m.local:192.168.91.103
-            - ldap.m.local:192.168.91.103
+            - gerrit.x.io:192.168.91.103
+            - sonar.x.io:192.168.91.103
+            - ldap.x.io:192.168.91.103
         volumes:
             - jenkins_home:/var/jenkins_home
             - /var/run/docker.sock:/var/run/docker.sock
