--- a/compose/sonar/sonar-project.properties
+++ b/compose/sonar/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.host.url=http://sonar.m.local
+sonar.host.url=http://sonar.x.io
 sonar.login=sqp_abcd121212
 
 sonar.sonar.sourceEncoding=UTF-8
