--- a/compose/traefik/http/dynamic-conf/gerrit-sonar.yml
+++ b/compose/traefik/http/dynamic-conf/gerrit-sonar.yml
@@ -1,13 +1,13 @@
 http:
     routers:
         ldapadmin:
-            rule: "Host(`ldap.m.local`)"
+            rule: "Host(`ldap.x.io`)"
             service: "ldapadmin"
         gerrit:
-            rule: "Host(`gerrit.m.local`)"
+            rule: "Host(`gerrit.x.io`)"
             service: "gerrit"
         sonarqube:
-            rule: "Host(`sonar.m.local`)"
+            rule: "Host(`sonar.x.io`)"
             service: "sonarqube"
 
     services:
