--- a/compose/traefik/self-signed/dynamic-conf/fastapi.yml
+++ b/compose/traefik/self-signed/dynamic-conf/fastapi.yml
@@ -1,7 +1,7 @@
 http:
     routers:
         fastapi:
-            rule: "Host(`fastapi.x.io`)"
+            rule: "Host(`fastapi.x.internal`)"
             service: "fastapi"
             tls: { }
 
