--- a/compose/traefik/self-signed/dynamic-conf/self.yml
+++ b/compose/traefik/self-signed/dynamic-conf/self.yml
@@ -6,6 +6,6 @@ tls:
 http:
     routers:
         dashboard:
-            rule: Host(`traefik.x.io`)
+            rule: Host(`traefik.x.internal`)
             service: api@internal
             tls: { }
