feat(traefik): add gerrit dynamic configuration

--- a/compose/gerrit/gerrit.ldap.config
+++ b/compose/gerrit/gerrit.ldap.config
@@ -40,7 +40,7 @@
 
 [user]
 	name = Gerrit Code Review
-	email = webhook@max-optics.com
+	email = webhook@example.com
 	anonymousCoward = Gerrit Code Review
 
 [sendemail]
@@ -48,9 +48,9 @@
 	smtpServerPort = 465
 	smtpEncryption = SSL
 	sslVerify = true
-	smtpUser = webhook@max-optics.com
+	smtpUser = webhook@example.com
 	smtpPass = YOUR_PASSWORD
-	from = ${user} (Code Review) <webhook@max-optics.com>
+	from = ${user} (Code Review) <webhook@example.com>
 
 [commentlink "changeid"]
 	match = (I[0-9a-f]{8,40})
