chore: add Makefile to manage my all compose

--- a/compose/traefik/self-signed/compose.yml
+++ b/compose/traefik/self-signed/compose.yml
@@ -3,6 +3,7 @@ version: Compose specification
 services:
     traefik:
         image: traefik:3.0
+        restart: always
         ports:
             - "80:80"
             - "443:443"
