--- a/compose/traefik/self-signed/dynamic-conf/bitnami-ldap.yml
+++ b/compose/traefik/self-signed/dynamic-conf/bitnami-ldap.yml
@@ -9,4 +9,4 @@ http:
         bitnami-ldap:
             loadBalancer:
                 servers:
-                    -   url: "http://bitnami-ldapadmin"
+                    -   url: "http://ldap-ui"
