--- a/compose/grafana/compose.yml
+++ b/compose/grafana/compose.yml
@@ -5,15 +5,17 @@ services:
         image: grafana/grafana
         restart: always
         environment:
+            - GF_SECURITY_ADMIN_USER=admin
+            - GF_SECURITY_ADMIN_PASSWORD=admin
             - TZ=Asia/Shanghai
         volumes:
-            - "./grafana.ini:/etc/grafana/grafana.ini"
-            - "./provisioning:/etc/grafana/provisioning"
-            - "grafana-data:/var/lib/grafana"
+            #- "./grafana.ini:/etc/grafana/grafana.ini"
+            #- "./provisioning:/etc/grafana/provisioning"
+            - "grafana:/var/lib/grafana"
         networks:
             - traefik-net
 networks:
     traefik-net:
         external: true
 volumes:
-    grafana-data:
+    grafana:
