--- a/compose/prometheus/compose.yml
+++ b/compose/prometheus/compose.yml
@@ -8,9 +8,11 @@ services:
             - TZ=Asia/Shanghai
         volumes:
             - "./prometheus.yml:/etc/prometheus/prometheus.yml"
+            - "prometheus:/prometheus"
         networks:
             - traefik-net
-
 networks:
     traefik-net:
         external: true
+volumes:
+    prometheus:
