feat: change the way of installing commit-msg

--- a/compose/gerrit/gerrit.ldap.config
+++ b/compose/gerrit/gerrit.ldap.config
@@ -1,6 +1,8 @@
 [gerrit]
 	basePath = git
 	defaultBranch = refs/heads/main
+	# if you want to change the way of installing commit msg, you can uncomment out the following line
+	# installCommitMsgHookCommand = "f=`git rev-parse --git-dir`/hooks/commit-msg ; mkdir -p $(dirname $f) ; curl -Lo $f -k https://gerrit.x.internal/tools/hooks/commit-msg ; chmod +x $f"
 
 [index]
 	type = LUCENE
