--- a/compose/gerrit/project.config
+++ b/compose/gerrit/project.config
@@ -1,5 +1,19 @@
+[label "Code-Review"]
+	defaultValue = 0
+	value = -2 This shall not be submitted
+	value = -1 I would prefer this is not submitted as is
+	value = 0 No score
+	value = +1 Looks good to me, but someone else must approve
+	value = +2 Looks good to me, approved
+	copyCondition = changekind:NO_CHANGE OR changekind:TRIVIAL_REBASE OR is:MIN
 [label "Verified"]
+	defaultValue = 0
 	value = -1 Fails
 	value = 0 No score
 	value = +1 Verified
 	copyCondition = changekind:NO_CODE_CHANGE
+[submit-requirement "Code-Review"]
+	description = A maximum vote from a non-uploader is required for the \
+	              'Code-Review' label. A minimum vote is blocking.
+	submittableIf = label:Code-Review=MAX,user=non_uploader AND -label:Code-Review=MIN
+	canOverrideInChildProjects = true
