feat: use manager to change password

--- a/compose/ldap/ssp/compose.yml
+++ b/compose/ldap/ssp/compose.yml
@@ -1,152 +1,11 @@
 version: Compose specification
 services:
     ssp:
-        image: tiredofit/self-service-password
-        container_name: ssp
+        image: ltbproject/self-service-password
         volumes:
-            - ssp-data:/www/ssp
-        environment:
-            - DEBUG_MODE=TRUE
-            - SETUP_TYPE=AUTO
-            # LDAP Settings
-            - LDAP_SERVER=ldap://ldap-srv:1389
-            - LDAP_STARTTLS=false
-            - LDAP_BINDDN=cn=admin,dc=chaos,dc=io
-            - LDAP_BINDPASS=secret
-            - LDAP_BASE_SEARCH=ou=users,dc=chaos,dc=io
-            - LDAP_LOGIN_ATTRIBUTE=uid
-            - LDAP_FULLNAME_ATTRIBUTE=cn
-
-            # Hash mechanism for password:
-            # SSHA
-            # SHA
-            # SMD5
-            # MD5
-            # CRYPT
-            # clear (the default)
-            # auto (will check the hash of current password)
-            # This option is not used with ADMODE=true
-            - PASSWORD_HASH=auto
-            # Prefix to use for salt with CRYPT
-            - PASSWORD_HASH_CRYPT_SALT_LENGTH=6
-
-            # Local password policy
-            # This is applied before directory password policy
-            # Minimal length
-            - PASSWORD_MIN_LENGTH=12
-            # Maximal length
-            - PASSWORD_MAX_LENGTH=30
-            # Minimal lower characters
-            - PASSWORD_MIN_LOWERCASE=2
-            # Minimal upper characters
-            - PASSWORD_MIN_UPPERCASE=2
-            # Minimal digit characters
-            - PASSWORD_MIN_DIGIT=2
-            # Minimal special characters
-            - PASSWORD_MIN_SPECIAL=2
-            # Minimum number of different classes of characters
-            - PASSWORD_COMPLEXITY=4
-            # Dont reuse the same password as currently
-            - PASSWORD_NO_REUSE=true
-            # Definition of special characters
-            - PASSWORD_SPECIAL_CHARACTERS="`~!@#$%^&*()_-+={}[]|\:;\"'<>,.?/"
-            # Forbidden characters
-            # Check that password is different from login
-            - PASSWORD_DIFFERENT_LOGIN=true
-            # use pwnedpasswords api v2 to securely check if the password has been on a leak
-            - PASSWORD_USE_PWNED=FALSE
-            # Show policy constraints message:
-            # always
-            # never
-            # onerror
-            - PASSWORD_SHOW_POLICY=never
-            # Position of password policy constraints message:
-            # above - the form
-            # below - the form
-            - PASSWORD_SHOW_POLICY_POSITION=above
-            # disallow use of the only special character as defined in `$pwd_special_chars` at the beginning and end
-            - PASSWORD_NO_SPECIAL_ENDS=false
-
-            # Who changes the password?
-            # Also applicable for question/answer save
-            # user=the user itself
-            # manager=the above binddn
-            - WHO_CAN_CHANGE_PASSWORD=user
-            # Show extended error message returned by LDAP directory when password is refused
-            - LDAP_EXTENDED_ERROR=false
-            # Use standard change form?
-            - CHANGE_PASSWORD=true
-
-
-            ## Tokens
-            # Use tokens?
-            # true
-            # false
-            - USE_TOKENS=true
-            # Crypt tokens?
-            # true
-            # false
-            - TOKEN_CRYPT=true
-            # Token lifetime in seconds
-            - TOKEN_LIFETIME=3600
-
-            ## Mail
-            # LDAP mail attribute
-            - LDAP_MAIL_ATTRIBUTE=mail
-            # Who the email should come from
-            - MAIL_FROM=noreply@example.com
-            - MAIL_FROM_NAME=Self Service Password
-            # Mail Signature
-            #- MAIL_SIGNATURE=""
-            # Notify users anytime their password is changed
-            - NOTIFY_ON_CHANGE=true
-            # PHPMailer configuration (see https://github.com/PHPMailer/PHPMailer)
-            - SMTP_DEBUG=0
-            - SMTP_HOST=smtp.example.com
-            - SMTP_AUTH_ON=true
-            - SMTP_USER=noreply@example.com
-            - SMTP_PASS=smtppassword
-            - SMTP_TIMEOUT=30
-            - SMTP_PORT=587
-            - SMTP_SECURE_TYPE=tls
-            - SMTP_AUTOTLS=false
-            - MAIL_CONTENTTYPE=text/plain
-            - MAIL_WORDWRAP=80
-            - MAIL_CHARSET=utf8
-            - MAIL_PRIORITY=3
-            - MAIL_NEWLINE=PHP_EOL
-
-
-            ## Encryption, decryption keyphrase
-            - SECRETKEY=secretkey
-
-            ## Networking
-            # Is this container behind a reverse proxy
-            - IS_BEHIND_PROXY=true
-
-            ## Misc, Branding Settings
-            # Display help messages
-            - SHOW_HELP=true
-            # Display Menu on top
-            - SHOW_MENU=true
-            # Language
-            - LANG=en
-            # Debug mode
-            - DEBUG_MODE=false
-            # Logo
-            - LOGO=images/ltb-logo.png
-            # Background Image
-            - BACKGROUND_IMAGE=images/unsplash-space.jpeg
-
-            ## Default action
-            # change
-            # sendtoken
-            # sendsms
-            - DEFAULT_ACTION=change
+            - ./ssp.conf.php:/var/www/conf/config.inc.local.php
         networks:
             - traefik-net
-volumes:
-    ssp-data:
 
 networks:
     traefik-net:
