feat: remove something redundant

--- a/compose/traefik/self-signed/dynamic-conf/prometheus.yml
+++ b/compose/traefik/self-signed/dynamic-conf/prometheus.yml
@@ -1,12 +1,12 @@
 http:
     routers:
-        prometheus:
+        prom:
             rule: "Host(`prometheus.x.internal`)"
-            service: "prometheus"
+            service: "prom"
             tls: { }
 
     services:
-        prometheus:
+        prom:
             loadBalancer:
                 servers:
                     -   url: "http://prometheus:9090"
