--- a/compose/adguard/compose.yml
+++ b/compose/adguard/compose.yml
@@ -1,17 +1,17 @@
 version: Compose specification
 
 services:
-    guard:
+    adguard:
         image: adguard/adguardhome
         ports:
-            - 53:53/tcp
-            - 53:53/udp
+            # - 53:53/tcp
+            # - 53:53/udp
             - 67:67/udp
-            - 68:68/udp
-            - 80:80/tcp
-            - 443:443/tcp
-            - 443:443/udp
-            - 3000:3000/tcp
+            # - 68:68/udp
+            # - 80:80/tcp
+            # - 443:443/tcp
+            # - 443:443/udp
+            # - 3000:3000/tcp
             - 853:853/tcp
             - 784:784/udp
             - 853:853/udp
@@ -21,6 +21,13 @@ services:
         volumes:
             - adguard_work:/opt/adguardhome/work
             - adguard_conf:/opt/adguardhome/conf
+        networks:
+            - traefik-net
+
 volumes:
     adguard_work:
     adguard_conf:
+
+networks:
+    traefik-net:
+        external: true
