--- a/compose/traefik/http/compose.yml
+++ b/compose/traefik/http/compose.yml
@@ -1,6 +1,7 @@
 services:
     traefik:
-        image: traefik:3.1
+        image: traefik:3.5
+        restart: always
         ports:
             - "80:80"
         environment:
