--- a/compose/uptime-kuma/compose.yml
+++ b/compose/uptime-kuma/compose.yml
@@ -4,6 +4,7 @@ services:
         restart: always
         volumes:
             - uptime_data:/app/data
+            - "/var/run/docker.sock:/var/run/docker.sock:ro"
         networks:
             - traefik-net
 
