fix: add websecure entryPoint to nextcloud route

--- a/compose/traefik/http/dynamic-conf/home.yml
+++ b/compose/traefik/http/dynamic-conf/home.yml
@@ -35,6 +35,8 @@ http:
             rule: "Host(`nextcloud.x.internal`)"
             service: "nextcloud"
             tls: {}
+            entryPoints:
+                - websecure
             middlewares:
                 - nextcloud-chain
 
